# cgf-ac-script-ui

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_flags.txt
lib/: ACTReader.cpp  ACTReader.hpp  BodyData.hpp  CellData.hpp  CellGrid.cpp  CellGrid.hpp  Coord.cpp  Coord.hpp  MassAuditReader.cpp  MassAuditReader.hpp  MassCase.cpp  MassCase.hpp  PathwayCellData.hpp  act_csvexport.hpp  act_reader.cpp  act_reader.hpp  cell_grid.cpp  cell_grid.hpp  coord.cpp  coord.hpp  csv_serializable.hpp  grdecl_reader.hpp  mass_audit_reader.cpp  mass_audit_reader.hpp  mass_audit_result.hpp  test.cpp
script/: .gitignore  README.md  functions.sh  process.sh
script/bash-script/: .gitignore  functions.sh  migration_batch_runner.sh  patterns.txt  process.sh  setup_env.sh
script/cpp_impl/: Makefile  main  main.cpp
script/python-script/: .gitignore  main.py  patterns.txt
src/: ConfigPanel.cpp  ConfigPanel.hpp  FileListPanel.cpp  FileListPanel.hpp  FileProcessor.cpp  FileProcessor.hpp  MyApp.cpp  MyApp.hpp  MyFrame.cpp  MyFrame.hpp  Task.cpp  Task.hpp  main.cpp
